WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120689
RenderSVGResource shouldn't trigger relayout during render tree teardown.
https://bugs.webkit.org/show_bug.cgi?id=120689
Summary
RenderSVGResource shouldn't trigger relayout during render tree teardown.
Andreas Kling
Reported
2013-09-04 11:18:28 PDT
<
rdar://problem/14908967
> Exposed by assertions added in
bug 120684
.
Attachments
Patch
(1.42 KB, patch)
2013-09-04 11:21 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2013-09-04 11:21:45 PDT
Created
attachment 210479
[details]
Patch
Antti Koivisto
Comment 2
2013-09-04 11:35:23 PDT
Comment on
attachment 210479
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=210479&action=review
> Source/WebCore/rendering/svg/RenderSVGResource.cpp:198 > + if (needsLayout && !object->documentBeingDestroyed()) > object->setNeedsLayout(true);
Should this test be in setNeedsLayout instead?
Andreas Kling
Comment 3
2013-09-04 11:49:54 PDT
Comment on
attachment 210479
[details]
Patch Clearing flags on attachment: 210479 Committed
r155055
: <
http://trac.webkit.org/changeset/155055
>
Andreas Kling
Comment 4
2013-09-04 11:50:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug